added logo and some css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musicians Play</title>
+    <title>askKaren</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://kit.fontawesome.com/12d7b13aed.js" crossorigin="anonymous"></script>
+  </head>
 
 
 </head>
@@ -19,11 +21,11 @@
     <div class="container ">
 
         <div class="jumbotron">
-            <img class="brandedLogo" src="" alt="Welcome  Logo" width="50%">
-                <h1 class="ask">ask</h1><h1 class="Karen">Karen</h1>  
+            <img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
+                 
                 <input type="text" placeholder="Search..." >
-                <button class="search">Search</button>    
-                <button class="entitled">I'm Feeling Entitled</button>
+                <a class="waves-effect waves-light btn"><i class="fas fa-wine-glass-alt"></i> Search</a>
+                <a class="waves-effect waves-light btn"><i class="far fa-hand-paper"></i> I'm Feeling Entitled</a>
 
 
     </div>
