--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>askKaren</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://kit.fontawesome.com/12d7b13aed.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="style.css">
+  
   </head>
 
 
@@ -24,8 +24,8 @@
             <img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
                  
                 <input type="text" placeholder="Search..." >
-                <a class="waves-effect waves-light btn"><i class="fas fa-wine-glass-alt"></i> Search</a>
-                <a class="waves-effect waves-light btn"><i class="far fa-hand-paper"></i> I'm Feeling Entitled</a>
+                <a class="waves-effect waves-light btn search-btn"><i class="fas fa-wine-glass-alt"></i> Search</a>
+                <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper"></i> I'm Feeling Entitled</a>
 
 
     </div>
