--- a/index.html
+++ b/index.html
@@ -1,70 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Header -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>askKaren</title>
+    <!-- JQuery Ajax Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/12d7b13aed.js" crossorigin="anonymous"></script>
+    <!-- Materialize Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Personalized CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
+<!-- Body -->
 
 <body>
 
-
     <div class="container ">
-
+        <!-- jumbotron -->
         <div class="jumbotron">
+            <!-- branded logo -->
             <img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
 
-            <input type="text" placeholder="Search...">
-            <a class="waves-effect waves-light btn search-btn"><i class="fas fa-wine-glass-alt"></i> Search</a>
+            <input type="text" placeholder="Search..." id="search-div city-input">
+            <!-- Two buttons similar to Google Layout -->
+            <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
+                Search</a>
             <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper"></i> I'm Feeling
                 Entitled</a>
-
-
         </div>
-
-        <div class="grid-container hide">
-            <div class="Result-Window">Results</div>
-            <div class="Categories">Make your selections</div>
-            <form action="/action_page.php">
-                <input type="checkbox" id="Choice1" name="Choice1" value="Restaurants">
-                <label for="Choice1"> Restaurants</label><br>
-                <input type="checkbox" id="Choice2" name="Choice2" value="Salons">
-                <label for="Choice2">Salons</label><br>
-                <input type="checkbox" id="Choice3" name="Choice3" value="Dog Groomers">
-                <label for="Choice3">Dog Groomers</label><br>
-                <input type="checkbox" id="Choice4" name="Choice4" value="Department Stores">
-                <label for="Choice4">Department Stores</label><br>
-                <input type="checkbox" id="Choice5" name="Choice5" value="Gyms">
-                <label for="Choice5">Gyms</label><br>
-                <input type="checkbox" id="Choice6" name="Choice6" value="Places of Worship">
-                <label for="Choice6">Places of Worship</label><br>
-                <input type="checkbox" id="Choice7" name="Choice7" value="Grocery Stores">
-                <label for="Choice7">Grocery Stores</label><br><br>
-                <input type="submit" value="Submit">
-            </form>
-
-        </div>
-
-
     </div>
 
-
-    <footer>
-        <div id="info">
-
+    <!-- results box -->
+    <div class="container results-window">
+        <!-- city name -->
+        <div id="city-div">
+            <h2 id="city-name"></h2>
+        </div>
+        <!-- restaurants listed in groups of 3 -->
+        <div id="restaurant0" class="res-box">
+            <p id="res-name0"></p>
+            <p id="res-address0"></p>
+            <p id="res-rating0"></p>
         </div>
 
-        <h2>Live, Laugh, Love</h2>
+        <div id="restaurant1" class="res-box">
+            <p id="res-name1"></p>
+            <p id="res-address1"></p>
+            <p id="res-rating1"></p>
+        </div>
 
+        <div id="restaurant2" class="res-box">
+            <p id="res-name2"></p>
+            <p id="res-address2"></p>
+            <p id="res-rating2"></p>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <footer>
+        <div id="info"></div>
+        <!-- Stereotypical Statment that all Karens like -->
+        <h2>Live, Laugh, Love</h2>
     </footer>
 
+    <!-- external materialize JS script -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="script.js"></script>
+    <script src="/UtilitiesJS/preloader.js"></script>
+    
 </body>
 
 </html>
