--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- branded logo -->
             <img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
 
-            <input type="text" placeholder="Search..." id="search-div city-input">
+            <input type="text" placeholder="Search..." id="city-input">
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
@@ -74,7 +74,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="script.js"></script>
-    <script src="/UtilitiesJS/preloader.js"></script>
+    <!-- <script src="/UtilitiesJS/preloader.js"></script> -->
     
 </body>
 
