--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
 
-    <div class="container ">
+    <div class="container valign-wrapper center-align ">
         <!-- jumbotron -->
-        <div class="jumbotron">
+        <div class="row">
             <!-- branded logo -->
             <img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
 
@@ -66,7 +66,8 @@
     <footer>
         <div id="info"></div>
         <!-- Stereotypical Statment that all Karens like -->
-        <h2>Live, Laugh, Love</h2>
+        <!-- on load the Live, laugh love will show and then on search, the toggle will hide and show the bad advice API in the footer -->
+        <h3 class="center-align"><em>Live, Laugh, Love</em></h3>
     </footer>
 
     <!-- external materialize JS script -->
