'updated css and index.html'

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Personalized CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;600&family=Noto+Serif+JP:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <!-- Body -->
@@ -31,10 +33,15 @@
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
-            <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper"></i> I'm Feeling
+            <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper entitled"></i> I'm Feeling
                 Entitled</a>
         </div>
     </div>
+
+<!-- preloader -->
+  <div class="preloader">
+
+  </div>
 
     <!-- results box -->
     <div class="container results-window">
