--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="info"></div>
         <!-- Stereotypical Statment that all Karens like -->
         <!-- on load the Live, laugh love will show and then on search, the toggle will hide and show the bad advice API in the footer -->
-        <h3 class="center-align"><em>Live, Laugh, Love</em></h3>
+        <h3 class="center-align hide"><em>Live, Laugh, Love</em></h3>
     </footer>
 
     <!-- external materialize JS script -->
