Updated JS, added list of suggested cities upon submitting - clicking on one of three states will bring up the results

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
         </div>
     </div>
 
+    <!-- CITY SELECTION DIV - ADDED BY ETHAN, NOT STYLED YET!! -->
+    <div id="city-selection">
+        <a id="city0" class="cities"></a>
+        <a id="city1" class="cities"></a>
+        <a id="city2" class="cities"></a>
+    </div>
+    
+
 <!-- preloader -->
   <div class="preloader">
 
