--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a id="city1" class="cities"></a>
         <a id="city2" class="cities"></a>
     </div>
-    
+
 
 <!-- preloader -->
   <div class="preloader">
@@ -62,18 +62,21 @@
             <p id="res-name0"></p>
             <p id="res-address0"></p>
             <p id="res-rating0"></p>
+            <a id="res-url0" target="_blank"></a>
         </div>
 
         <div id="restaurant1" class="res-box">
             <p id="res-name1"></p>
             <p id="res-address1"></p>
             <p id="res-rating1"></p>
+            <a id="res-url1" target="_blank"></a>
         </div>
 
         <div id="restaurant2" class="res-box">
             <p id="res-name2"></p>
             <p id="res-address2"></p>
             <p id="res-rating2"></p>
+            <a id="res-url2" target="_blank"></a>
         </div>
     </div>
 
