Added JS for 'feeling entitled' button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
-            <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper entitled"></i> I'm Feeling
+            <a class="waves-effect waves-light btn search-btn" id="entitled-button"><i class="far fa-hand-paper entitled"></i> I'm Feeling
                 Entitled</a>
         </div>
     </div>
@@ -43,6 +43,10 @@
         <a id="city0" class="cities"></a>
         <a id="city1" class="cities"></a>
         <a id="city2" class="cities"></a>
+        <!-- ENTITLED BUTTON CITIES -->
+        <a id="city3" class="cities-ent"></a>
+        <a id="city4" class="cities-ent"></a>
+        <a id="city5" class="cities-ent"></a>
     </div>
 
 
