'updated cards for restaurants and CSS for preloader'

--- a/index.html
+++ b/index.html
@@ -33,20 +33,16 @@
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
-            <a class="waves-effect waves-light btn search-btn" id="entitled-button"><i class="far fa-hand-paper entitled"></i> I'm Feeling
+            <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper entitled"></i> I'm Feeling
                 Entitled</a>
         </div>
     </div>
 
     <!-- CITY SELECTION DIV - ADDED BY ETHAN, NOT STYLED YET!! -->
     <div id="city-selection">
-        <a id="city0" class="cities"></a>
-        <a id="city1" class="cities"></a>
-        <a id="city2" class="cities"></a>
-        <!-- ENTITLED BUTTON CITIES -->
-        <a id="city3" class="cities-ent"></a>
-        <a id="city4" class="cities-ent"></a>
-        <a id="city5" class="cities-ent"></a>
+        <a id="city0" class="cities card center-align"></a>
+        <a id="city1" class="cities card center-align"></a>
+        <a id="city2" class="cities card center-align"></a>
     </div>
 
 
@@ -62,21 +58,21 @@
             <h2 id="city-name"></h2>
         </div>
         <!-- restaurants listed in groups of 3 -->
-        <div id="restaurant0" class="res-box">
+        <div id="restaurant0" class="res-box card center-align">
             <p id="res-name0"></p>
             <p id="res-address0"></p>
             <p id="res-rating0"></p>
             <a id="res-url0" target="_blank"></a>
         </div>
 
-        <div id="restaurant1" class="res-box">
+        <div id="restaurant1" class="res-box card center-align">
             <p id="res-name1"></p>
             <p id="res-address1"></p>
             <p id="res-rating1"></p>
             <a id="res-url1" target="_blank"></a>
         </div>
 
-        <div id="restaurant2" class="res-box">
+        <div id="restaurant2" class="res-box card center-align">
             <p id="res-name2"></p>
             <p id="res-address2"></p>
             <p id="res-rating2"></p>
@@ -87,7 +83,7 @@
     <!-- footer -->
     <footer>
         <div id="info"></div>
-        <!-- Stereotypical Statment that all Karens like -->
+        <!-- Stereotypical Statement that all Karens like -->
         <!-- on load the Live, laugh love will show and then on search, the toggle will hide and show the bad advice API in the footer -->
         <h3 class="center-align hide"><em>Live, Laugh, Love</em></h3>
     </footer>
