'updated CSS/HTML' for restaurants cards and preloader'

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- CITY SELECTION DIV - ADDED BY ETHAN, NOT STYLED YET!! -->
-    <div id="city-selection">
+    <div id="city-selection center-align">
         <a id="city0" class="cities card center-align"></a>
         <a id="city1" class="cities card center-align"></a>
         <a id="city2" class="cities card center-align"></a>
@@ -58,27 +58,32 @@
             <h2 id="city-name"></h2>
         </div>
         <!-- restaurants listed in groups of 3 -->
-        <div id="restaurant0" class="res-box card center-align">
+        <div id="restaurant0" class="res-box card center-align restaurants">
             <p id="res-name0"></p>
             <p id="res-address0"></p>
             <p id="res-rating0"></p>
             <a id="res-url0" target="_blank"></a>
         </div>
 
-        <div id="restaurant1" class="res-box card center-align">
+        <div id="restaurant1" class="res-box card center-align restaurants">
             <p id="res-name1"></p>
             <p id="res-address1"></p>
             <p id="res-rating1"></p>
             <a id="res-url1" target="_blank"></a>
         </div>
 
-        <div id="restaurant2" class="res-box card center-align">
+        <div id="restaurant2" class="res-box card center-align restaurants">
             <p id="res-name2"></p>
             <p id="res-address2"></p>
             <p id="res-rating2"></p>
             <a id="res-url2" target="_blank"></a>
         </div>
     </div>
+
+    
+  <!-- Help Modal  -->
+    <div class="identifier"></div>
+
 
     <!-- footer -->
     <footer>
