'updating restaurant cards'

--- a/index.html
+++ b/index.html
@@ -4,30 +4,33 @@
 <!-- Header -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>askKaren</title>
-    <!-- JQuery Ajax Library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/12d7b13aed.js" crossorigin="anonymous"></script>
-    <!-- Materialize Library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Personalized CSS -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;600&family=Noto+Serif+JP:wght@400;600&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>askKaren</title>
+	<!-- JQuery Ajax Library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+	</script>
+	<!-- Font Awesome -->
+	<script src="https://kit.fontawesome.com/12d7b13aed.js" crossorigin="anonymous">
+	</script>
+	<!-- Materialize Library -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<!-- Personalized CSS -->
+	<link rel="stylesheet" href="style.css">
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200;400;600&family=Noto+Serif+JP:wght@400;600&display=swap"
+	 rel="stylesheet">
 </head>
 
 <!-- Body -->
 
 <body>
 
-    <div class="container valign-wrapper center-align ">
-        <!-- jumbotron -->
-        <div class="row">
-            <!-- branded logo -->
-            <img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
+	<div class="container valign-wrapper center-align ">
+		<!-- jumbotron -->
+		<div class="row">
+			<!-- branded logo -->
+			<img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%">
 
             <input type="text" placeholder="Search..." id="city-input">
             <!-- Two buttons similar to Google Layout -->
@@ -39,10 +42,14 @@
     </div>
 
     <!-- CITY SELECTION DIV - ADDED BY ETHAN, NOT STYLED YET!! -->
-    <div id="city-selection center-align">
-        <a id="city0" class="cities card center-align"></a>
-        <a id="city1" class="cities card center-align"></a>
-        <a id="city2" class="cities card center-align"></a>
+    <div class="container center-align">
+      <div id="city-selection">
+          <a id="city0" class="cities card-content center-align"></a>
+          <a id="city1" class="cities card-content center-align"></a>
+          <a id="city2" class="cities card-content center-align"></a>
+          <a id="city3" class="cities card-content center-align"></a>
+          <a id="city4" class="cities card-content center-align"></a>
+      </div>
     </div>
 
 
@@ -66,7 +73,7 @@
         </div>
 
         <div id="restaurant1" class="res-box card center-align restaurants">
-            <p id="res-name1"></p>
+            <p id="res-name1"</p>
             <p id="res-address1"></p>
             <p id="res-rating1"></p>
             <a id="res-url1" target="_blank"></a>
