--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
-            <a class="waves-effect waves-light btn search-btn"><i class="far fa-hand-paper entitled"></i> I'm Feeling
+            <a class="waves-effect waves-light btn search-btn" id="entitled-button"><i class="far fa-hand-paper entitled"></i> I'm Feeling
                 Entitled</a>
         </div>
     </div>
@@ -47,8 +47,9 @@
           <a id="city0" class="cities card-content center-align"></a>
           <a id="city1" class="cities card-content center-align"></a>
           <a id="city2" class="cities card-content center-align"></a>
-          <a id="city3" class="cities card-content center-align"></a>
-          <a id="city4" class="cities card-content center-align"></a>
+          <a id="city3" class="cities-ent card-content center-align"></a>
+          <a id="city4" class="cities-ent card-content center-align"></a>
+          <a id="city5" class="cities-ent card-content center-align"></a>
       </div>
     </div>
 
