--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-<div class="mymodal" >
+<div class="mymodal hide">
   
 </div>
 
@@ -34,9 +34,9 @@
 		<!-- jumbotron -->
 		<div class="row">
 			<!-- branded logo -->
-			<a href="https://www.pinterest.com/bullen0805/minion-memes/" target="_blank"><img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%"></a>
+			<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0&ab_channel=cotter548" target="_blank"><img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%"></a>
 
-            <input type="text" placeholder="Search..." id="city-input">
+            <input type="text" placeholder="Search For Your City" id="city-input">
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
@@ -45,15 +45,17 @@
         </div>
     </div>
 
-    <!-- CITY SELECTION DIV - ADDED BY ETHAN, NOT STYLED YET!! -->
-    <div class="container center-align">
+    <!-- CITY SELECTION DIV - ADDED BY ETHAN -->
+    <div class="container valign-wrapper center-align">
       <div id="city-selection">
-          <a id="city0" class="cities card-content center-align info-display"></a>
-          <a id="city1" class="cities card-content center-align info-display"></a>
-          <a id="city2" class="cities card-content center-align info-display"></a>
-          <a id="city3" class="cities-ent card-content center-align info-display"></a>
-          <a id="city4" class="cities-ent card-content center-align info-display"></a>
-          <a id="city5" class="cities-ent card-content center-align info-display"></a>
+        <div class="row whatever">
+          <a id="city0" class="cities center-align info-display citylink-btn"></a>
+          <a id="city1" class="cities center-align info-display citylink-btn"></a>
+          <a id="city2" class="cities center-align info-display citylink-btn"></a>
+          <a id="city3" class="cities-ent center-align info-display citylink-btn"></a>
+          <a id="city4" class="cities-ent center-align info-display citylink-btn"></a>
+          <a id="city5" class="cities-ent center-align info-display citylink-btn"></a>
+          </div>
       </div>
     </div>
 
@@ -71,21 +73,22 @@
         </div>
         <!-- restaurants listed in groups of 3 -->
         <div id="restaurant0" class="res-box res-entitled card center-align restaurants hide">
-            <p id="res-name0" class="info-display card-content"></p>
+            <p id="res-name0" class="info-display card-content card-title"></p>
             <p id="res-address0" class="info-display card-content"></p>
             <p id="res-rating0" class="info-display card-conent"></p>
-            <button class ="btn"><a id="res-url0" target="_blank" class="info-display"></a></button>
+            <div class="card-action">
+            <button class ="btn"><a id="res-url0" target="_blank" class="info-display"></a></button></div>
         </div>
 
         <div id="restaurant1" class="res-box card center-align restaurants hide">
-            <p id="res-name1" class="info-display card-content"></p>
+            <p id="res-name1" class="info-display card-content card-title"></p>
             <p id="res-address1" class="info-display card-content"></p>
             <p id="res-rating1" class="info-display card-content"></p>
              <button class ="btn"><a id="res-url1" target="_blank" class="info-display"></a></button>
         </div>
 
         <div id="restaurant2" class="res-box card center-align restaurants hide">
-            <p id="res-name2" class="info-display card-content"></p>
+            <p id="res-name2" class="info-display card-content card-title"></p>
             <p id="res-address2" class="info-display card-content"></p>
             <p id="res-rating2" class="info-display card-content"></p>
              <button class ="btn"><a id="res-url2" target="_blank" class="info-display"></a></button>
@@ -102,6 +105,7 @@
         <div id="info"></div>
         <!-- Stereotypical Statement that all Karens like -->
         <!-- on load the Live, laugh love will show and then on search, the toggle will hide and show the bad advice API in the footer -->
+        <p id="bad-advice" class="center-align"></p>
         <h3 class="center-align hide"><em>Live, Laugh, Love</em></h3>
     </footer>
 
