'updated JS, CSS styles and HMTL'

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <a id="city0" class="cities center-align info-display citylink-btn hide"></a>
           <a id="city1" class="cities center-align info-display citylink-btn hide"></a>
           <a id="city2" class="cities center-align info-display citylink-btn hide"></a>
-          <a id="city3" class="cities-ent center-align info-display citylink-btn"></a>
-          <a id="city4" class="cities-ent center-align info-display citylink-btn"></a>
-          <a id="city5" class="cities-ent center-align info-display citylink-btn"></a>
+          <a id="city3" class="cities-ent center-align info-display citylink-btn hide"></a>
+          <a id="city4" class="cities-ent center-align info-display citylink-btn hide"></a>
+          <a id="city5" class="cities-ent center-align info-display citylink-btn hide"></a>
           </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
             <p id="res-address0" class="info-display card-content white-text"></p>
             <p id="res-rating0" class="info-display card-content white-text"></p>
             <div class="card-action">
-              <button class ="btn rest-btn"><a id="res-url0" target="_blank" class="info-display white-text"><i class="far fa-phone"></i></a></button>
+              <button class ="btn rest-btn"><a id="res-url0" target="_blank" class="info-display white-text"><i class="far fa-phone"></i> </a></button>
             </div>
         </div>
 
