--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
 	</div>
 
+
+
+
 	<div class="container valign-wrapper center-align ">
 		<!-- jumbotron -->
 		<div class="row">
@@ -102,7 +105,16 @@
         </div>
     </div>
 
+
+  <div class="adSource container" id="adBox">
+    <div class="row">
+  
+    <div class="col s12 m6 l3 ad-picture"><img width="500px" height="500px" id="myPicture1" alt="some image"></div>
+    <div class="col s12 m6 l3 ad-picture"><img width="500px" height="500px" id="myPicture2" alt="some image"></div>
     
+    </div>
+  </div>
+
   <!-- Help Modal  -->
     <div class="identifier"></div>
 
@@ -121,6 +133,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="script.js"></script>
+    <script src="./UtilitiesJS/adPopulate.js"></script>
     <script src="./UtilitiesJS/callmgr.js"></script>
     <script src="./UtilitiesJS/preloader.js"></script>
     
