Pushing changes to github- Rodolfo

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
   <div class="adSource container" id="adBox">
     <div class="row">
   
-    <div class="col s12 m6 l3 ad-picture"><img width="500px" height="500px" id="myPicture1" alt="some image"></div>
-    <div class="col s12 m6 l3 ad-picture"><img width="500px" height="500px" id="myPicture2" alt="some image"></div>
+    <div class="col s12 m6 l3 ad-picture center-align"><img width="150px" height="150px" id="myPicture1" alt="some image"></div>
+    <div class="col s12 m6 l3 ad-picture center-align"><img width="150px" height="150px" id="myPicture2" alt="some image"></div>
     
     </div>
   </div>
