--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 		<div class="row">
 			<!-- branded logo -->
 			<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0&ab_channel=cotter548" target="_blank"><img class="brandedLogo" src="assets/askKarenLogo.png" alt="Welcome  Logo" width="50%"></a>
+      <img class="brandedLogo" src="assets/lll.png" alt="Welcome  Logo" width="50%">
 
-            <input type="text" placeholder="Search For Your City" id="city-input">
+            <input type="text" placeholder="Search For Your City..." id="city-input">
             <!-- Two buttons similar to Google Layout -->
             <a class="waves-effect waves-light btn search-btn" id="city-button"><i class="fas fa-wine-glass-alt"></i>
                 Search</a>
@@ -53,7 +54,7 @@
     <!-- CITY SELECTION DIV - ADDED BY ETHAN -->
     <div class="container valign-wrapper center-align">
       <div id="city-selection">
-        <div class="row whatever">
+        <div class="row">
           <a id="city0" class="cities center-align info-display citylink-btn hide"></a>
           <a id="city1" class="cities center-align info-display citylink-btn hide"></a>
           <a id="city2" class="cities center-align info-display citylink-btn hide"></a>
@@ -106,11 +107,11 @@
     </div>
 
 
-  <div class="adSource container" id="adBox">
+  <div class="adSource container center-align" id="adBox">
     <div class="row">
   
-    <div class="col s12 m6 l3 ad-picture center-align"><img width="150px" height="150px" id="myPicture1" alt="some image"></div>
-    <div class="col s12 m6 l3 ad-picture center-align"><img width="150px" height="150px" id="myPicture2" alt="some image"></div>
+    <div class="col s12 m6 l3 ad-picture center-align"><img width="200px" height="200px" id="myPicture1" alt="some image"></div>
+    <div class="col s12 m6 l3 ad-picture center-align"><img width="200px" height="200px" id="myPicture2" alt="some image"></div>
     
     </div>
   </div>
