--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
   <div class="adSource container center-align" id="adBox">
     <div class="row">
   
-    <div class="col s12 m12 lgl2 ad-picture center-align"><img width="200px" height="200px" id="myPicture1" alt="some image"></div>
+    <div class="col s6 m6 lg6 ad-picture center-align"><img width="200px" height="200px" id="myPicture1" alt="some image"></div>
+    <div class="col s6 m6 lg6 ad-picture center-align"><img width="200px" height="200px" id="myPicture2" alt="some image"></div>
        
   </div>
 
